--- a/rideboard/widget/SettingsWindow.xaml
+++ b/rideboard/widget/SettingsWindow.xaml
@@ -1,7 +1,7 @@
 <Window x:Class="RideBoard.Widget.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Settings" Height="200" Width="300"
+        Title="Settings" Height="280" Width="300"
         WindowStyle="None" ResizeMode="NoResize"
         AllowsTransparency="True" Background="Transparent"
         Topmost="True" WindowStartupLocation="CenterScreen">
@@ -43,6 +43,18 @@
                         </Style>
                     </Button.Resources>
                 </Button>
+
+                <!-- About Info -->
+                <StackPanel Margin="0,25,0,0">
+                    <TextBlock Text="RideBoard v1.1" Foreground="#D0FFFFFF" FontSize="12" FontWeight="SemiBold" HorizontalAlignment="Center"/>
+                    <TextBlock Foreground="#90FFFFFF" FontSize="11" HorizontalAlignment="Center" Margin="0,4,0,0">
+                        <Hyperlink NavigateUri="https://github.com/raymond89huang-prog/stravar_ride_widget" RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="#90FFFFFF" TextDecorations="None">
+                            Developed by Raymond Huang
+                        </Hyperlink>
+                    </TextBlock>
+                    <TextBlock Text="© 2025 Open Source (MIT)" Foreground="#60FFFFFF" FontSize="10" HorizontalAlignment="Center" Margin="0,2,0,0"/>
+                </StackPanel>
             </StackPanel>
 
             <!-- Close Button -->
