fix: embed fonts as resources to ensure they load in packaged app

--- a/rideboard/widget/App.xaml
+++ b/rideboard/widget/App.xaml
@@ -16,9 +16,9 @@
         <SolidColorBrush x:Key="PanelBrush" Color="{StaticResource PanelColor}"/>
         
         <!-- Fonts -->
-        <FontFamily x:Key="DigitalFont">./Assets/Fonts/Digital-7/#Digital-7 Mono</FontFamily>
-        <FontFamily x:Key="PixelFont">./Assets/Fonts/VT323/#VT323</FontFamily>
-        <FontFamily x:Key="LabelFont">./Assets/Fonts/VT323/#VT323, Segoe UI, Arial</FontFamily>
+        <FontFamily x:Key="DigitalFont">pack://application:,,,/Assets/Fonts/Digital-7/digital-7-mono-3.ttf#Digital-7 Mono</FontFamily>
+        <FontFamily x:Key="PixelFont">pack://application:,,,/Assets/Fonts/VT323/VT323-Regular.ttf#VT323</FontFamily>
+        <FontFamily x:Key="LabelFont">pack://application:,,,/Assets/Fonts/VT323/VT323-Regular.ttf#VT323, Segoe UI, Arial</FontFamily>
         
         <!-- Effects -->
         <DropShadowEffect x:Key="DigitalGlow" Color="{StaticResource LcdMainColor}" BlurRadius="2" ShadowDepth="0" Opacity="0.18"/>
